# physical-ai-and-humanoid-robotics

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  package-lock.json  package.json  render.yaml  requirements.txt
.claude/: settings.local.json
.claude/agents/: locomotion-planner.md  manipulation-expert.md  robot-safety-validator.md  speech-processor.md  vision-specialist-physical-ai.md
backend/: KNOWN_ISSUES.md  conftest.py  main.py  pyproject.toml  requirements.txt  test_auth_endpoints.py  test_auth_endpoints_async.py  test_auth_integration.py  test_auth_simple.py  test_chat_api.py  test_fix.py  test_manual.json  test_personalization.py  test_pool.sh  test_quick.py  test_session_manager.py  test_signin.json  verify_tables.py
backend/app/: chat_history.py  chatkit_server.py  chatkit_store.py  database.py  rag_agent.py  session_manager.py
backend/backend.egg-info/: PKG-INFO  requires.txt
backend/migrations/: 001_create_chat_tables.sql
backend/models/: __init__.py  chat.py
backend/scripts/: reindex_docs.py
backend/src/auth/: __init__.py  claims_extractor.py  config.py  jwks_cache.py  jwt_middleware.py  manager.py  middleware.py  migrate.py  models.py  personalization.py  routes.py  schemas.py
backend/tests/auth/: __init__.py  test_claims_extraction.py  test_jwks_cache.py  test_jwt_validation.py
better-auth-service/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
physical-robotics-ai-book/: .env.example  docusaurus.config.ts  jest.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
(+162 files in other folders)
